@@ -74,6 +74,9 @@ xx/xx/2006 - x.xx.x - .
 	  windows.  (Yura)
 	- ntfsmount: Fix free clusters and MFT records calculation.  (Yura)
 	- ntfsmount: Fix st_blocks calculation.  (Yuval, Yura)
+	- ntfsmount: Umount volume in DESTROY. This is guarantees that all
+	  data would be synced before umount return for volumes mounted with
+	  blkdev option.  (Yura)
 
 21/06/2006 - 1.13.1 - Various fixes.
 
